@@ -31,3 +31,4 @@
 - plugins can now be used in other apps :) see cms/docs/placeholders.txt
 - plugins can now be grouped
 - a lot of bugfixes
+- the cms now depends on the cms.middleware.media.PlaceholderMediaMiddleware middleware
